--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mysql_bamazon",
   "version": "1.0.0",
-  "description": "",
+  "description": "Challenge #1: Customer View",
   "main": "bamazon.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +19,6 @@
   "dependencies": {
     "inquirer": "^6.5.0",
     "mysql": "^2.17.1"
-  }
+  },
+  "devDependencies": {}
 }
